@@ -14,6 +14,7 @@ public class User {
     private final Long id;
     private final String name;
     private final String email;
+    private final String password;
     private final String phoneNumber;
     private final Set<UserRole> roles;
 
@@ -24,8 +25,9 @@ public class User {
         this.id = builder.id;
         this.name = builder.name;
         this.email = builder.email;
+        this.password = builder.password;
         this.phoneNumber = builder.phoneNumber;
-        this.roles = builder.roles != null ? Collections.unmodifiableSet(new HashSet<>(builder.roles)) : Collections.emptySet();
+        this.roles = builder.roles != null ? Set.copyOf(builder.roles) : Collections.emptySet();
     }
 
     // --- BUSINESS RULES ---
@@ -33,6 +35,7 @@ public class User {
     public boolean isValid() {
         return name != null && !name.isBlank() &&
                email != null && !email.isBlank() && EMAIL_PATTERN.matcher(email).matches() &&
+               password != null && !password.isBlank() &&
                roles != null && !roles.isEmpty();
     }
 
@@ -45,6 +48,7 @@ public class User {
     public Long getId() { return id; }
     public String getName() { return name; }
     public String getEmail() { return email; }
+    public String getPassword() { return password; }
     public String getPhoneNumber() { return phoneNumber; }
     public Set<UserRole> getRoles() { return roles; }
 
@@ -58,6 +62,7 @@ public class User {
         private Long id;
         private String name;
         private String email;
+        private String password;
         private String phoneNumber;
         private Set<UserRole> roles = new HashSet<>();
 
@@ -73,6 +78,11 @@ public class User {
 
         public Builder email(String email) {
             this.email = email;
+            return this;
+        }
+
+        public Builder password(String password) {
+            this.password = password;
             return this;
         }
 
